--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,10 @@ html, body{
 	border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 
+.row div img{
+	padding-top: 30px;
+}
+
 .text-center{
 	text-align: center;
 }
